tests/bigint/invalid07.js
type InvalidDecimalE = 2.0e9n; // error
